<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hexawatch</string>
    <string name="config_label">Hexawatch Configuration</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="config_tab_themes">Themes</string>
    <string name="config_tab_custom">Custom</string>
    <string name="config_tab_about">About</string>

    <string name="custom_bg_color">Background color</string>
    <string name="custom_fill_color">Fill color</string>
    <string name="custom_stroke_color">Stroke color</string>
    <string name="custom_stroke_size">Stroke size:</string>
    <string name="custom_hexagon_ratio">Hexagon ratio:</string>
    <string name="custom_reset">Reset</string>
    <string name="custom_save">Save</string>
    <string name="custom_reset_msg">Custom theme restored</string>
    <string name="custom_save_msg">Custom theme saved</string>

    <string name="about_version">Version %1$s (#%2$d)\nhomemade with love, by Nilhcem</string>
    <string name="about_how_to_title">How to tell the time?</string>
    <string name="about_how_to_desc">• The 12 triangles around the outside of the clock indicate hours (from 1 to 12) in the same position as in a conventional clock\n• The 6 large triangles at each side of the inner hexagon indicate the first digit of the minutes (0X, 1X, 2X, 3X, 4X, 5X)\n• The digit displayed at the center of the hexagon is the last digit of the minutes (0 to 9)</string>
    <string name="about_try_title">Try it out!</string>
    <string name="about_try_desc">Noticed the hexawatch above?\nIt is set to display the following time:</string>
    <string name="about_try_button">Show me a different time (please)</string>
    <string name="about_toggle_shape_title_round">Got a square watch?</string>
    <string name="about_toggle_shape_title_square">Got a circle watch?</string>
    <string name="about_toggle_shape_desc_round">Please don\'t be sad, these watches are great too.\nI mean.. at least I guess so… What? You want this app to display square previews? Why didn\'t you tell me earlier? Just tap here, and magic will happen (but don\'t tell anyone about that, it\'s our little secret)</string>
    <string name="about_toggle_shape_desc_square">A circle watch you said? Doesn\'t it look strange?\nI mean.. at least I guess so… What? You want this app to display circle previews? This seems weird but tap here, and magic will happen (but DON\'T tell anyone about that, it\'s a SECRET)\nA circle watch ahaha, such a crazy idea ahaha</string>
</resources>
