<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@android:color/white"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="8dp">

    <com.nilhcem.hexawatch.ui.custom.ColorChooserView
        android:id="@+id/custom_bg_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_bg_color"/>

    <com.nilhcem.hexawatch.ui.custom.ColorChooserView
        android:id="@+id/custom_fill_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_fill_color"/>

    <com.nilhcem.hexawatch.ui.custom.ColorChooserView
        android:id="@+id/custom_stroke_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_stroke_color"/>

    <com.nilhcem.hexawatch.ui.custom.SeekBarChooserView
        android:id="@+id/custom_stroke_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_stroke_size"/>

    <com.nilhcem.hexawatch.ui.custom.SeekBarChooserView
        android:id="@+id/custom_hexagon_ratio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_hexagon_ratio"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end"
        android:orientation="horizontal"
        android:paddingEnd="6dp"
        android:paddingStart="6dp"
        android:paddingTop="2dp">

        <Button
            android:id="@+id/custom_buttons_reset"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_reset"/>

        <Button
            android:id="@+id/custom_buttons_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_save"/>
    </LinearLayout>
</LinearLayout>
