<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="24sp"/>

        <com.nilhcem.hexawatch.ui.widget.HexawatchView
            android:id="@+id/about_watchface"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="4dp"
            tools:background="@color/accent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/white"
            android:elevation="8dp"
            android:orientation="vertical"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="4dp"
                android:text="@string/about_how_to_title"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="@string/about_how_to_desc"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="4dp"
                android:text="@string/about_try_title"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="@string/about_try_desc"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/about_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:textSize="22sp"
                tools:text="13:37"/>

            <Button
                android:id="@+id/about_change_time_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_try_button"/>

            <TextView
                android:id="@+id/about_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingTop="8dp"
                android:textColor="@color/secondary_text"
                android:textSize="12sp"
                tools:text="@string/about_version"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
